--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "ant-design-vue": "^1.7.8",
+    "axios": "^1.3.5",
+    "core-js": "^3.30.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
