--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^1.3.5",
     "core-js": "^3.30.0",
+    "echarts": "^5.4.2",
+    "echarts-liquidfill": "^3.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
