--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "core-js": "^3.30.0",
     "echarts": "^5.4.2",
     "echarts-liquidfill": "^3.1.0",
+    "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-weather-widget": "^4.3.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
